<resources>
    <string name="app_name">Sextoto</string>
    <string name="usuario_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="olvcontraseña">Parece ser que olvidaste tu contraseña...</string>
    <string name="login">Iniciar</string>
    <string name="registro">Registrarse</string>
    <string name="email">email</string>
    <string name="conocer">¿Cómo nos conoció?</string>
    <string name="amigos">amigos</string>
    <string name="trabajo">trabajo</string>
    <string name="publicidad">publicidad</string>
    <string name="hombre">hombre</string>
    <string name="mujer">mujer</string>
    <string name="genero">Genero</string>
    <string name="fec_nac">Fecha de nacimiento</string>
    <string name="numero">Número celular</string>
    <string name="in">55</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="inicio">Bienvenido al oasis</string>
    <string name="notificaciones">Aceptas terminos y condiciones?</string>
    <string name="region">Región</string>
    <string name="name">Nombre</string>
    <string name="pick">Escoger</string>
    <string name="agregar">Agregar contraseña</string>
    <string name="cs">Cerrar Sesión</string>
    <string name="w">Welcome to the jungle</string>
    <string name="Recuperar">Recuperar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="regresar">Regresar</string>
    <string name="Card1">Bar registrado</string>
    <string name="otro">Otro</string>
    <string name="tm">Bares guardados</string>

</resources>