<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    tools:context="com.example.mysplash.activity_login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="65dp">


        <EditText
            android:id="@+id/user"
            android:layout_width="311dp"
            android:layout_height="71dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/edtext_bg"
            android:ems="10"
            android:hint="@string/usuario_label"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="311dp"
            android:layout_height="71dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/edtext_bg"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/inicio_sesion"
            android:textColor="@color/verde"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="244dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail">

            <Button
                android:id="@+id/buttonM"
                android:layout_width="164dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="41dp"
                android:backgroundTint="@color/verde"
                android:elevation="6dp"
                android:text="@string/registro"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/recuperar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="327dp"
                android:layout_height="68dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/verde"
                android:elevation="6dp"
                android:text="@string/olvcontraseña"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.653" />

            <Button
                android:id="@+id/recuperar"
                android:layout_width="164dp"
                android:layout_height="64dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/verde"
                android:elevation="6dp"
                android:text="@string/login"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="374dp"
            android:layout_height="348dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="-105dp"
            android:layout_marginEnd="-40dp"
            android:layout_marginBottom="37dp"
            android:rotation="239"
            android:rotationX="-172"
            android:rotationY="-8"
            app:layout_constraintBottom_toTopOf="@+id/mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.232"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107"
            app:srcCompat="@drawable/planta" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>